[gd_scene load_steps=4 format=3 uid="uid://4lm2ofr1pb88"]

[ext_resource type="Script" path="res://examples/attribute_container/attribute_container.gd" id="1_x7rde"]

[sub_resource type="Attribute" id="Attribute_jndah"]
attribute_name = "attribute_000"
initial_value = 50.0
max_value = 100.0
min_value = 1.4013e-45

[sub_resource type="AttributeSet" id="AttributeSet_7dso0"]
attributes = Array[Attribute]([SubResource("Attribute_jndah")])

[node name="AttributeContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x7rde")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="AttributeValueDisplay" type="ProgressBar" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="DecreaseValue" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "-"

[node name="IncreaseValue" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "+"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BuffsSelectionContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BuffsSelection" type="MenuButton" parent="CenterContainer/VBoxContainer/BuffsSelectionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Select a buff or debuff to apply"

[node name="AttributeContainer" type="AttributeContainer" parent="."]
attribute_set = SubResource("AttributeSet_7dso0")
